# Readium-MCP

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  test.yml
src/: server.py
test/: test_server.py
tests/: test_server.py
