[tool.poetry]
name = "readium-mcp"
version = "0.1.0"
description = ""
authors = ["Pablo Toledo <pablotoledo@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mcp = { version = ">=1.6.0,<2.0.0", extras = ["cli"] }
readium = { version = "^0.4.1", python = ">=3.10,<4.0" }

[tool.poetry.scripts]
readium-mcp = "src.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
